[package]
authors = ["Rust-IPFS contributors"]
description = "Bitswap protocol implementation used in ipfs"
edition = "2021"
name = "rust-ipfs-bitswap"
version = "0.3.0-alpha.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dariusc93/rust-ipfs"

[build-dependencies]
prost-build = { default-features = false, version = "0.11" }

[dependencies]
libipld = "0.15"
fnv = { default-features = false, version = "1.0" }
futures = { default-features = false, version = "0.3" }
hash_hasher = "2.0.3"
libp2p-core = { default-features = false, version = "0.38.0" }
libp2p-swarm = { default-features = false, version = "0.41.0" }
prost = { default-features = false, version = "0.11" }
thiserror = { default-features = false, version = "1.0" }
tokio = { default-features = false, version = "1", features = ["rt"] }
tracing = { default-features = false, version = "0.1" }
unsigned-varint = { default-features = false, version = "0.7" }
