[package]
authors = ["Rust-IPFS contributors"]
description = "UnixFs tree support"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rust-unixfs"
readme = "README.md"
repository = "https://github.com/dariusc93/rust-ipfs"
version = "0.3.0-alpha.3"

[features]
default = ["filetime"]

[dependencies]
libipld = "0.15"
either = { default-features = false, version = "1.5" }
filetime = { optional = true, version = "0.2.12" }
quick-protobuf = { default-features = false, features = [
    "std",
], version = "0.8" }
sha2 = { default-features = false, version = "0.10" }

[dev-dependencies]
hash_hasher = "2.0.3"
hex-literal = { default-features = false, version = "0.3" }
libc = { default-features = false, version = "0.2.71" }
multibase = { default-features = false, version = "0.9" }
tar = { default-features = false, version = "0.4" }
criterion = { default-features = false, version = "0.3" }

[[bench]]
name = "ingest-tar"
harness = false

[[bench]]
name = "adder"
harness = false
