[package]
name = "pallet-tds-ipfs-runtime-api"
authors = ["Stefan Lang <https://github.com/langi667>"]
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { default-features = false, version = "4.0.0-dev", path = "../../../../primitives/api" }

[features]
default = ["std"]
std = [
	"sp-api/std",
]
